--- a/src/blocks/partners/partners.scss
+++ b/src/blocks/partners/partners.scss
@@ -1,4 +1,6 @@
 .partners {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
