--- a/static/main.css
+++ b/static/main.css
@@ -363,6 +363,9 @@ a:hover {
 .feature:first-child {
   margin-top: 0; }
 
+.feature img {
+  transition: transform 150ms ease-in; }
+
 @media all and (min-width: 1075px) {
   .feature {
     margin-top: 0; } }
@@ -388,7 +391,8 @@ a:hover {
     width: 170px;
     top: calc(50% - 2px);
     left: 115px;
-    border-bottom: 2px solid #777777; } }
+    border-bottom: 2px solid #777777;
+    display: inline; } }
 /* __>> feature__icon-circle--black -------------------------------------------------- */
 .feature__icon-circle--black {
   margin: 0 auto 0 auto;
@@ -411,7 +415,7 @@ a:hover {
 /* __ feature__icon -------------------------------------------------- */
 .feature__icon {
   padding-bottom: 15px;
-  transition: transform 100ms ease-in; }
+  transition: transform 150ms ease-in; }
 
 .l-section--background_dark .feature__icon {
   width: 40px;
@@ -420,6 +424,12 @@ a:hover {
   align-items: center;
   padding-bottom: 0;
   padding-right: 10px; }
+
+.l-section--background_light .feature:hover img {
+  transform: scale(1.2); }
+
+.l-section--background_light .feature:hover .feature__icon {
+  transform: scale(1); }
 
 .feature:hover .feature__icon {
   transform: scale(1.2); }
