--- a/src/blocks/feature/__icon-circle/feature__icon-circle.scss
+++ b/src/blocks/feature/__icon-circle/feature__icon-circle.scss
@@ -18,5 +18,6 @@
         top: calc(50% - 2px);
         left: 115px;
         border-bottom: 2px solid #777777;
+        display: inline;
     }
 }
