--- a/src/blocks/feature/__icon/feature__icon.scss
+++ b/src/blocks/feature/__icon/feature__icon.scss
@@ -1,6 +1,6 @@
 .feature__icon {
     padding-bottom: 15px;
-    transition: transform 100ms ease-in;
+    transition: transform 150ms ease-in;
 }
 
 .l-section--background_dark .feature__icon {
@@ -10,6 +10,14 @@
     align-items: center;
     padding-bottom: 0;
     padding-right: 10px;
+}
+
+
+.l-section--background_light .feature:hover img {
+    transform: scale(1.2);
+}
+.l-section--background_light .feature:hover .feature__icon {
+    transform: scale(1);
 }
 
 .feature:hover .feature__icon {
