Change animation for icons with big circles

--- a/src/main.scss
+++ b/src/main.scss
@@ -110,6 +110,8 @@
         @import "blocks/feature/__icon/feature__icon.scss";  
 /* __>> feature__icon--top -------------------------------------------------- */
         @import "blocks/feature/__icon/--top/feature__icon--top.scss"; 
+/* __ feature__svg -------------------------------------------------- */
+        @import "blocks/feature/__svg/feature__svg.scss";  
 /* __ feature__text -------------------------------------------------- */
         @import "blocks/feature/__text/feature__text.scss";   
 /* __ feature__title -------------------------------------------------- */
