--- a/src/main.scss
+++ b/src/main.scss
@@ -168,8 +168,8 @@
 
 /* button  ---------------------------------------------------- */
     @import "blocks/button/button.scss"; 
-/* __ button--rectangle -------------------------------------------------- */
-        @import "blocks/button/--rectangle/button--rectangle.scss";  
+/* __ button--transparent -------------------------------------------------- */
+        @import "blocks/button/--transparent/button--transparent.scss";  
 /* __ button--rectangle -------------------------------------------------- */
         @import "blocks/button/--menu/button--menu.scss"; 
 /************************************************************************\
