--- a/static/main.css
+++ b/static/main.css
@@ -657,31 +657,11 @@ a:hover {
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
   letter-spacing: -1px;
   cursor: pointer;
-  z-index: 3; }
+  z-index: 3;
+  border-radius: 45px;
+  padding: 0 35px; }
 
-.button::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -30px;
-  background-color: #7cc576;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  z-index: -1; }
-
-.button::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: -30px;
-  background-color: #7cc576;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  z-index: -1; }
-
-.button:hover, .button:hover::before, .button:hover::after {
+.button:hover {
   background-color: #ffffff;
   color: #222222;
   text-shadow: none; }
@@ -689,8 +669,8 @@ a:hover {
 .l-section--offer .button {
   margin-left: 30px; }
 
-/* __ button--rectangle -------------------------------------------------- */
-.button--rectangle {
+/* __ button--transparent -------------------------------------------------- */
+.button--transparent {
   background-color: transparent;
   width: 180px;
   height: 55px;
@@ -701,9 +681,10 @@ a:hover {
   color: #ffffff;
   font-weight: 100;
   cursor: pointer;
-  border-radius: 3px; }
+  border-radius: 3px;
+  transition: all 300ms ease-in; }
 
-.button--rectangle:hover {
+.button--transparent:hover {
   background-color: #ffffff;
   color: #7cc576; }
 
