--- a/static/main.css
+++ b/static/main.css
@@ -54,6 +54,9 @@ body {
   position: fixed;
   z-index: 2; }
 
+.blur {
+  filter: blur(3px); }
+
 a {
   color: inherit;
   text-decoration: none; }
