--- a/src/global/global.scss
+++ b/src/global/global.scss
@@ -29,7 +29,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(38, 38, 38, .3);
     position: fixed;
     z-index: 2;
