--- a/static/main.css
+++ b/static/main.css
@@ -49,7 +49,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh + 80px);
   background-color: rgba(38, 38, 38, 0.3);
   position: fixed;
   z-index: 2; }
