Set opinion section in row for large screens

--- a/src/blocks/opinion/__picture-background/opinion__picture-background.scss
+++ b/src/blocks/opinion/__picture-background/opinion__picture-background.scss
@@ -10,3 +10,9 @@
     align-items: center;
     justify-content: center;
 }
+
+@include respond(750px) {
+    .opinion__picture-background {
+        margin-bottom: 0;
+    }
+}
