--- a/static/main.css
+++ b/static/main.css
@@ -540,7 +540,9 @@ a:hover {
 
 @media only screen and (min-width: 750px) {
   .opinion__picture-background {
-    margin-bottom: 0; } }
+    margin-bottom: 0;
+    width: 100%;
+    max-width: 220px; } }
 /* __ opinion__picture -------------------------------------------------- */
 .opinion__picture {
   width: 90%;
