Reverse content of opinion section for large screens

--- a/src/blocks/opinion/__picture-background/opinion__picture-background.scss
+++ b/src/blocks/opinion/__picture-background/opinion__picture-background.scss
@@ -15,6 +15,7 @@
     .opinion__picture-background {
         margin-bottom: 0;
         margin-left: 0;
+        margin-right: 0;
         width: 100%;
         max-width: 220px;
     }
