--- a/src/blocks/opinion/opinion.scss
+++ b/src/blocks/opinion/opinion.scss
@@ -9,4 +9,8 @@
     .opinion {
         flex-direction: row;
     }
+    
+    .opinion:nth-child(even) {
+        flex-direction: row-reverse;
+    }
 }
