--- a/src/blocks/opinion/__quotation/opinion__quotation.scss
+++ b/src/blocks/opinion/__quotation/opinion__quotation.scss
@@ -22,7 +22,10 @@
 }
  
 @include respond(750px) {
-
+    .opinion__quotation {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
     .opinion__quotation::before {
         top: calc(50% - 13px);
         left: -23px;
@@ -30,5 +33,9 @@
         border-top: 13px solid transparent;
         border-bottom: 13px solid transparent;
         border-left: none;
+    }
+    .opinion:nth-child(even) .opinion__quotation::before {
+        left: 100%;
+        transform: scaleX(-1);
     }
 }
