Position project section

--- a/src/main.scss
+++ b/src/main.scss
@@ -97,6 +97,8 @@
         @import "blocks/heading/__subtitle/--subheading/heading__subtitle--subheading.scss";  
 /* project --------------------------------------------------------- */
     @import "blocks/project/project.scss";  
+/* >> project__features --------------------------------------------------------- */
+    @import "blocks/project/__features/project__features.scss";  
 
 /* feature --------------------------------------------------------- */
     @import "blocks/feature/feature.scss";  
