--- a/src/blocks/feature/--inline/feature--inline.scss
+++ b/src/blocks/feature/--inline/feature--inline.scss
@@ -5,7 +5,10 @@
     justify-content: flex-start;
     /* width: 470px; */
     margin-top: 15px;
+    width: 100%;
+    max-width: 470px;
 }
+
 
 .feature--inline:last-of-type {
     margin-bottom: 15px;
