Style link in project section

--- a/src/main.scss
+++ b/src/main.scss
@@ -99,6 +99,8 @@
     @import "blocks/project/project.scss";  
 /* >> project__features --------------------------------------------------------- */
     @import "blocks/project/__features/project__features.scss";  
+/* >> project__link --------------------------------------------------------- */
+    @import "blocks/project/__link/project__link.scss";  
 
 /* feature --------------------------------------------------------- */
     @import "blocks/feature/feature.scss";  
