--- a/src/blocks/heading/__subtitle/--subheading/heading__subtitle--subheading.scss
+++ b/src/blocks/heading/__subtitle/--subheading/heading__subtitle--subheading.scss
@@ -1,6 +1,6 @@
 .heading__subtitle--subheading {
     font-size: 14px;
     margin-bottom: 25px;
-    /* width: 425px; */
     text-align: justify;
+    line-height: 1.5;
 }
