--- a/src/main.scss
+++ b/src/main.scss
@@ -37,6 +37,8 @@
     @import "layout/l-section/--banner/l-section--banner.scss";
 /* >> l-section--offer -------------------------------------------------- */
     @import "layout/l-section/--offer/l-section--offer.scss";
+/* >> l-section--projects -------------------------------------------------- */
+    @import "layout/l-section/--projects/l-section--projects.scss";
 /* >> l-section--shade -------------------------------------------------- */
     @import "layout/l-section/--background_light/l-section--background_light.scss";
 /* >> l-section--top-footer -------------------------------------------------- */
