--- a/static/main.css
+++ b/static/main.css
@@ -114,6 +114,13 @@ a:hover {
   position: relative;
   text-align: left; }
 
+/* >> l-section--projects -------------------------------------------------- */
+.l-section--projects {
+  margin-top: 80px;
+  background: url("../img/projects/ipad.png");
+  background-position: right center;
+  background-repeat: no-repeat; }
+
 /* >> l-section--shade -------------------------------------------------- */
 .l-section--background_light {
   background-color: #f9f9f9; }
