--- a/src/main.scss
+++ b/src/main.scss
@@ -22,6 +22,8 @@
 @import "mixins/mixins.scss"; 
 /* global  ---------------------------------------------------- */
 @import "global/global.scss"; 
+/* preloader  ---------------------------------------------------- */
+@import "global/preloader.scss"; 
 /************************************************************************\
   # SETTINGS --- Global end ----------------------------------------------
 \************************************************************************/
