--- a/src/global/preloader.scss
+++ b/src/global/preloader.scss
@@ -1,13 +1,22 @@
 .preloader {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 100%;
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1000;
+    background: #76b852 -webkit-gradient(linear, left top, right top, from(#76b852), to(#7cc576));
+    background: #76b852 -webkit-linear-gradient(left, #76b852, #7cc576);
+    background: #76b852 -o-linear-gradient(left, #76b852, #7cc576);
     background: #76b852 linear-gradient(to right, #76b852, #7cc576);
     -webkit-transition: opacity .35s ease;
     -o-transition: opacity .35s ease;
@@ -20,22 +29,42 @@
     margin: 0 10px;
     border: 4px solid #ffffff;
     border-radius: 50%;
-    animation: show-hide 1s ease infinite;
+    -webkit-animation: show-hide 1s ease infinite;
+            animation: show-hide 1s ease infinite;
 }
 
 .dot:nth-child(2) {
-    animation-delay: 300ms;
+    -webkit-animation-delay: 300ms;
+            animation-delay: 300ms;
 }
 .dot:nth-child(3) {
-    animation-delay: 600ms;
+    -webkit-animation-delay: 600ms;
+            animation-delay: 600ms;
+}
+
+@-webkit-keyframes show-hide {
+    0% {
+        -webkit-transform: scale(0);
+                transform: scale(0);
+    }
+    50% {
+        -webkit-transform: scale(1);
+                transform: scale(1);
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
 @keyframes show-hide {
     0% {
-        transform: scale(0);
+        -webkit-transform: scale(0);
+                transform: scale(0);
     }
     50% {
-        transform: scale(1);
+        -webkit-transform: scale(1);
+                transform: scale(1);
         opacity: 1;
     }
     100% {
