--- a/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
+++ b/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
@@ -15,6 +15,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    padding-left: 90px;
     color: $grey-lvl5;
 }
 
