--- a/static/main.css
+++ b/static/main.css
@@ -222,6 +222,7 @@ a:hover {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  padding-left: 90px;
   color: #cccccc; }
 
 .l-section--offer .l-section__content-wrapper::before {
@@ -418,7 +419,8 @@ a:hover {
 
 /* __>> heading__subtitle--small -------------------------------------------------- */
 .heading__subtitle--small {
-  font-size: 16px; }
+  font-size: 16px;
+  width: 520px; }
 
 /* __>> heading__subtitle--subheading -------------------------------------------------- */
 .heading__subtitle--subheading {
@@ -773,9 +775,6 @@ a:hover {
   background-color: #ffffff;
   color: #222222;
   text-shadow: none; }
-
-.l-section--offer .button {
-  margin-left: 30px; }
 
 /* __ button--transparent -------------------------------------------------- */
 .button--transparent {
