--- a/src/blocks/menu/__list/--open/menu__list--open.scss
+++ b/src/blocks/menu/__list/--open/menu__list--open.scss
@@ -1,13 +1,13 @@
 .menu__list--open {
     position: absolute;
-    top: 80px;
+    top: 50px;
     left: 0;
 
     display: flex;
     flex-direction: column;
 
     width: 100%;
-    height: 300px;
+    height: 270px;
 
     background-color: $grey-lvl1;
     -webkit-box-shadow: 0 13px 12px 0 rgba(0,0,0,.37);
@@ -16,4 +16,9 @@
 
     align-items: center;
     justify-content: space-around;
+    
+    @include respond(640px) {
+        top: 80px;
+        height: 300px;
+    }
 }
