--- a/static/main.css
+++ b/static/main.css
@@ -341,18 +341,22 @@ a:hover {
 /* __>> menu__list--open -------------------------------------------------- */
 .menu__list--open {
   position: absolute;
-  top: 80px;
+  top: 50px;
   left: 0;
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 300px;
+  height: 270px;
   background-color: #ffffff;
   -webkit-box-shadow: 0 13px 12px 0 rgba(0, 0, 0, 0.37);
   -moz-box-shadow: 0 13px 12px 0 rgba(0, 0, 0, 0.37);
   box-shadow: 0 13px 12px 0 rgba(0, 0, 0, 0.37);
   align-items: center;
   justify-content: space-around; }
+  @media only screen and (min-width: 640px) {
+    .menu__list--open {
+      top: 80px;
+      height: 300px; } }
 
 /* __ menu__item -------------------------------------------------- */
 .menu__item {
