--- a/src/blocks/menu/__list/--open/menu__list--open.scss
+++ b/src/blocks/menu/__list/--open/menu__list--open.scss
@@ -1,6 +1,7 @@
 .menu__list--open {
     position: absolute;
-    top: 50px;
+    top: 80px;
+    height: 300px;
     left: 0;
 
     display: flex;
@@ -17,8 +18,12 @@
     align-items: center;
     justify-content: space-around;
     
-    @include respond(640px) {
-        top: 80px;
-        height: 300px;
+}
+
+@media only screen and (max-width: 640px) and (orientation: landscape)
+{
+    .menu__list--open {
+        top: 50px;
+        height: calc(100vh - 50px);
     }
 }
