--- a/static/main.css
+++ b/static/main.css
@@ -341,7 +341,8 @@ a:hover {
 /* __>> menu__list--open -------------------------------------------------- */
 .menu__list--open {
   position: absolute;
-  top: 50px;
+  top: 80px;
+  height: 300px;
   left: 0;
   display: flex;
   flex-direction: column;
@@ -353,11 +354,11 @@ a:hover {
   box-shadow: 0 13px 12px 0 rgba(0, 0, 0, 0.37);
   align-items: center;
   justify-content: space-around; }
-  @media only screen and (min-width: 640px) {
-    .menu__list--open {
-      top: 80px;
-      height: 300px; } }
 
+@media only screen and (max-width: 640px) and (orientation: landscape) {
+  .menu__list--open {
+    top: 50px;
+    height: calc(100vh - 50px); } }
 /* __ menu__item -------------------------------------------------- */
 .menu__item {
   display: inline-block;
@@ -803,8 +804,8 @@ a:hover {
 .button--menu {
   background-color: transparent;
   width: 100px;
-  height: 35px;
-  border: 1px solid #777777;
+  height: 55px;
+  border: 2px solid #777777;
   font-family: "Montserrat", sans-serif;
   font-size: 18px;
   text-transform: uppercase;
@@ -823,10 +824,9 @@ a:hover {
   .button--menu span {
     margin-right: 5px;
     margin-left: 5px; }
-  @media only screen and (min-width: 600px) {
+  @media only screen and (max-width: 640px) and (orientation: landscape) {
     .button--menu {
-      height: 55px;
-      border: 2px solid #777777; } }
+      height: 35px; } }
   @media only screen and (min-width: 640px) {
     .button--menu {
       display: none; } }
