--- a/src/blocks/header/__wrapper/header__wrapper.scss
+++ b/src/blocks/header/__wrapper/header__wrapper.scss
@@ -12,8 +12,14 @@
     text-decoration: none;
 }
 
-@media only screen and (max-device-width: 900px) and (orientation: landscape) {
+@media only screen and (max-width: 900px) and (orientation: landscape) {
     .header__wrapper {
         height: 50px;
+    }
+}
+
+@media only screen and (min-width: 765ppx) {
+    .header__wrapper {
+        height: 115px;
     }
 }
