--- a/src/blocks/header/__wrapper/header__wrapper.scss
+++ b/src/blocks/header/__wrapper/header__wrapper.scss
@@ -18,7 +18,7 @@
     }
 }
 
-@media only screen and (min-width: 765ppx) {
+@media only screen and (min-width: 765px) and (orientation: portrait) {
     .header__wrapper {
         height: 115px;
     }
