--- a/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
+++ b/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
@@ -34,4 +34,19 @@
         background-attachment: fixed;  
         padding-left: 90px;
     }
+    .l-section--offer .l-section__content-wrapper::after {
+    content: "";
+    width: 200px;
+    height: 100%;
+    background: url("../img/offer/gear.png");
+    background-color: $grey-lvl3;
+    background-position: left;
+    background-repeat: no-repeat;
+    position: relative;
+    text-align: left;
+    position: absolute;
+    top: 0;
+    left: -200px;
+    z-index: -100;
+}
 }
