--- a/static/main.css
+++ b/static/main.css
@@ -175,12 +175,7 @@ a:hover {
     margin-top: 50px; } }
 /* >> l-section--offer -------------------------------------------------- */
 .l-section--offer {
-  background: url("../img/offer/gear.png");
-  background-color: #e9e9e9;
-  background-position: 10%;
-  background-repeat: no-repeat;
-  position: relative;
-  text-align: left; }
+  background-color: #e9e9e9; }
 
 /* >> l-section--projects -------------------------------------------------- */
 @media only screen and (min-width: 850px) {
@@ -237,7 +232,22 @@ a:hover {
 @media only screen and (min-width: 736px) {
   .l-section--offer .l-section__content-wrapper {
     background-attachment: fixed;
-    padding-left: 90px; } }
+    padding-left: 90px; }
+
+  .l-section--offer .l-section__content-wrapper::after {
+    content: "";
+    width: 200px;
+    height: 100%;
+    background: url("../img/offer/gear.png");
+    background-color: #e9e9e9;
+    background-position: left;
+    background-repeat: no-repeat;
+    position: relative;
+    text-align: left;
+    position: absolute;
+    top: 0;
+    left: -200px;
+    z-index: -100; } }
 /* l-features-wrapper ---------------------------------------------------- */
 .l-features-wrapper {
   width: 100%;
