--- a/static/main.css
+++ b/static/main.css
@@ -209,7 +209,9 @@ a:hover {
 
 .l-section--offer .l-section__content-wrapper {
   background: url("../img/offer/background.png");
-  width: 100%;
+  width: 75%;
+  max-width: none;
+  min-width: 750px;
   margin: 0;
   padding: 100px 25px;
   align-self: flex-end;
@@ -217,6 +219,7 @@ a:hover {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  text-align: left;
   color: #cccccc; }
 
 .l-section--offer .l-section__content-wrapper::before {
@@ -229,7 +232,7 @@ a:hover {
   left: 0;
   z-index: -100; }
 
-@media only screen and (min-width: 736px) {
+@media only screen and (min-width: 765px) {
   .l-section--offer .l-section__content-wrapper {
     background-attachment: fixed;
     padding-left: 90px; }
@@ -243,7 +246,6 @@ a:hover {
     background-position: left;
     background-repeat: no-repeat;
     position: relative;
-    text-align: left;
     position: absolute;
     top: 0;
     left: -200px;
