--- a/static/main.css
+++ b/static/main.css
@@ -296,12 +296,12 @@ a:hover {
 .header__wrapper a {
   text-decoration: none; }
 
-@media only screen and (max-width: 900px) and (orientation: landscape) {
-  .header__wrapper {
-    height: 50px; } }
-@media only screen and (min-width: 765px) and (orientation: portrait) {
+@media only screen and (min-width: 765px) {
   .header__wrapper {
     height: 115px; } }
+@media only screen and (max-device-width: 900px) and (orientation: landscape) {
+  .header__wrapper {
+    height: 50px; } }
 /* logo  ---------------------------------------------------- */
 .logo {
   display: flex;
