--- a/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
+++ b/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
@@ -31,9 +31,8 @@
     z-index: -100;
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 970px) {
     .l-section--offer .l-section__content-wrapper{
-        background-attachment: fixed;  
         padding-left: 90px;
         width: 75%;
         min-width: 750px;
@@ -52,4 +51,10 @@
     left: -200px;
     z-index: -100;
 }
+}
+
+@media all and (min-width: 1367px) {
+    .l-section--offer .l-section__content-wrapper{
+        background-attachment: fixed;  
+    }
 }
