--- a/static/main.css
+++ b/static/main.css
@@ -231,9 +231,8 @@ a:hover {
   left: 0;
   z-index: -100; }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 970px) {
   .l-section--offer .l-section__content-wrapper {
-    background-attachment: fixed;
     padding-left: 90px;
     width: 75%;
     min-width: 750px; }
@@ -251,6 +250,9 @@ a:hover {
     top: 0;
     left: -200px;
     z-index: -100; } }
+@media all and (min-width: 1367px) {
+  .l-section--offer .l-section__content-wrapper {
+    background-attachment: fixed; } }
 /* l-features-wrapper ---------------------------------------------------- */
 .l-features-wrapper {
   width: 100%;
