Change color of heading

--- a/src/blocks/heading/__subtitle/heading__subtitle.scss
+++ b/src/blocks/heading/__subtitle/heading__subtitle.scss
@@ -1,6 +1,7 @@
 .heading__subtitle {
     font-size: 20px;
     margin-bottom: 60px;
+    color: $grey-lvl5;
 }
 
 .l-section--banner .heading__subtitle {
