--- a/static/main.css
+++ b/static/main.css
@@ -432,7 +432,8 @@ a:hover {
 /* __ heading__subtitle -------------------------------------------------- */
 .heading__subtitle {
   font-size: 20px;
-  margin-bottom: 60px; }
+  margin-bottom: 60px;
+  color: #cccccc; }
 
 .l-section--banner .heading__subtitle {
   margin-bottom: 60px; }
