Adjust margin for each section

--- a/src/main.scss
+++ b/src/main.scss
@@ -49,6 +49,8 @@
     @import "layout/l-section/--background_green/l-section--background_green.scss"; 
 /* __ l-section__content-wrapper -------------------------------------------------- */
     @import "layout/l-section/__content-wrapper/l-section__content-wrapper.scss"; 
+/* __ l-section__content-wrapper--small-margin -------------------------------------------------- */
+    @import "layout/l-section/__content-wrapper/--small-margin/l-section__content-wrapper--small-margin.scss"; 
 /* l-features-wrapper ---------------------------------------------------- */
 @import "layout/l-features-wrapper/l-features-wrapper.scss"; 
 /*\
