Remove bottom margin for last opinion

--- a/src/blocks/opinion/opinion.scss
+++ b/src/blocks/opinion/opinion.scss
@@ -5,6 +5,10 @@
     margin-bottom: 40px;
 }
 
+.opinion:last-of-type {
+    margin-bottom: 0;
+}
+
 @include respond(750px) {
     .opinion {
         flex-direction: row;
