Position footer items

--- a/src/main.scss
+++ b/src/main.scss
@@ -41,6 +41,8 @@
     @import "layout/l-section/--offer/l-section--offer.scss";
 /* >> l-section--projects -------------------------------------------------- */
     @import "layout/l-section/--projects/l-section--projects.scss";
+/* >> l-section--footer -------------------------------------------------- */
+    @import "layout/l-section/--footer/l-section--footer.scss";
 /* >> l-section--shade -------------------------------------------------- */
     @import "layout/l-section/--background_light/l-section--background_light.scss";
 /* >> l-section--top-footer -------------------------------------------------- */
