--- a/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
+++ b/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
@@ -1,10 +1,16 @@
 .l-section__content-wrapper {
     width: 90%;
     max-width: 940px;
-    margin: 100px auto;
+    margin: 60px auto;
     z-index: 1;
 }
 
+@include respond(1024px) {
+    .l-section__content-wrapper {
+    margin: 100px auto;
+}
+}
+    
 .l-section--offer .l-section__content-wrapper {
     background: url("../img/offer/background.png");
     width: 100%;
