--- a/static/main.css
+++ b/static/main.css
@@ -211,9 +211,12 @@ a:hover {
 .l-section__content-wrapper {
   width: 90%;
   max-width: 940px;
-  margin: 100px auto;
+  margin: 60px auto;
   z-index: 1; }
 
+@media only screen and (min-width: 1024px) {
+  .l-section__content-wrapper {
+    margin: 100px auto; } }
 .l-section--offer .l-section__content-wrapper {
   background: url("../img/offer/background.png");
   width: 100%;
