Change margins for features for large and small screens

--- a/src/blocks/feature/__icon/feature__icon.scss
+++ b/src/blocks/feature/__icon/feature__icon.scss
@@ -1,5 +1,11 @@
 .feature__icon {
+    padding-bottom: 15px;
+}
+
+@include respond(1024px) {
+    .feature__icon {
     padding-bottom: 30px;
+}
 }
 
 .l-section--background_dark .feature__icon {
