--- a/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
+++ b/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
@@ -59,8 +59,19 @@
 }
 }
 
-@media all and (min-width: 1367px) {
+@media only screen and (min-width: 1367px) {
     .l-section--offer .l-section__content-wrapper{
         background-attachment: fixed;  
     }
+}
+
+.l-section--footer .l-section__content-wrapper {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    
+    @include respond(1024px) {
+            position: relative;
+            flex-direction: row;
+        }   
 }
